--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
+}
+h2 {
+  text-align: center;
+}
+#list-of-shows {
+  list-style-type: none;
+}
+.list-item {
+  border: 5px solid gray;
+  margin-bottom: 2rem;
+  padding-left: 1rem;
 }
